# vLLM-Watermark

./: .gitignore  .gitmodules  README.md  benchmark.html  environment.yml  index.html  objects.inv  pyproject.toml  requirements-slurm.txt  searchindex.js  test_simple_watermark.py
.github/workflows/: publish-docs.yml
_sources/: index.rst.txt
_sources/algorithms/: openai.rst.txt
_static/: custom.css
algorithms/: index.html  maryland.html
docs/: api.rst  benchmark.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  mathematical_foundations.rst
docs/_static/: custom.css  custom.js
docs/algorithms/: index.rst  maryland.rst  openai.rst  openai_dr.rst  pf.rst
examples/: basic_usage.py  example_beam_gen.py  example_gumbel.py  example_maryland.py  example_maryland_l.py  example_openai.py  example_openai_double_randomization.py  new_engine_example.py  simple_watermark_example.py  vllm_example.py
resources/: refusal-data.jsonl  safety-data.jsonl  test_data.jsonl
scripts/: README.md  generate_watermarked.py  generate_wm_and_unwm.py  publish-docs.sh  run.sh  run_hf.sh  run_jsonl.sh
scripts/benchmark/: README.md  benchmark_watermarks.py  config.py  run_benchmark.sh  single_algorithm.py  utils.py
scripts/generation/: README.md  generate_watermarked.py  quick_test.sh  run_generate_watermarked.sh
scripts/pairs/: generate_wm_and_unwm.py
tests/: test_core.py
vllm_watermark/: __init__.py  config.py  core.py  engine.py  simple_watermark.py  watermarked_llm.py
vllm_watermark/logit_processors/: __init__.py  maryland_processor.py
vllm_watermark/samplers/: Notes.md  custom_sampler.py  gumbel_sampler.py  watermark_sampler.py
vllm_watermark/watermark_detectors/: ARCHITECTURE.md  README.md  __init__.py  base.py  factory.py  maryland_detectors.py  openai_detectors.py  pf_detector.py
vllm_watermark/watermark_generators/: ARCHITECTURE.md  README.md  __init__.py  base.py  factory.py  gumbel_generator.py  maryland_generator.py  (+2 more)
(+53 files in other folders)
